feat/채점 로직 관련 오류처리 수정